objects/SFDC_Volunteer_Participant__c.object
<CustomObject>
    <description>A junction object used for linking Volunteer Events to a participant</description>
    <fields>
        <fullName>Attended_mtgs_for_this_client_before__c</fullName>
        <label>Attended mtgs. for this client before?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Rental_per_day__c</fullName>
        <description>PRDCRM-27721/ Created By-Karthik</description>
        <inlineHelpText>This is the cost of the car rental per day even if the meeting requires more than 1 day</inlineHelpText>
        <label>Car Rental per day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>LG(20140422)   No changes to this field without Development Team Signoff.  Comments from the OE Ambassador volunteer</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter any comments you have related to the meeting for which you are volunteering.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_conducting_live_presentations__c</fullName>
        <formula>TEXT(OE_Ambassador_Volunteer__r.Confidence_level_conducting_presentation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence level with presenting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator_Comment__c</fullName>
        <description>This is a comment field for the coordinator to communicate with the Volunteer when they are not selected to facilitate</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordinator Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facilitator_Status__c</fullName>
        <formula>TEXT(OE_Ambassador_Volunteer__r.Facilitator_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_Type__c</fullName>
        <formula>TEXT(OE_Ambassador_Volunteer__r.Facilitator_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Cost__c</fullName>
        <description>PRDCRM-27721/Created by-Karthik.D</description>
        <inlineHelpText>This is the cost of the round trip flight</inlineHelpText>
        <label>Flight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Cost__c</fullName>
        <description>PRDCRM-27721/ Created by Karthik.D</description>
        <inlineHelpText>This is the cost of the hotel per day even if the meeting requires more than 1 day</inlineHelpText>
        <label>Hotel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Live_Presentations_outside_of_the_comp__c</fullName>
        <formula>TEXT(OE_Ambassador_Volunteer__r.Presentations_outside_the_company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live Presentations-outside of company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <formula>Volunteer_Event__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OE_Ambassador_City_and_State__c</fullName>
        <description>The City and State of the OE Ambassador from the contact record</description>
        <formula>OE_Ambassador_Volunteer__r.MailingCity  + &apos;, &apos; + OE_Ambassador_Volunteer__r.MailingState</formula>
        <label>OE Ambassador City and State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Ambassador_Region_Location__c</fullName>
        <description>Formula field to show the region of the OE Ambassador Volunteer</description>
        <formula>IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;Central&quot;), &quot;Central&quot;, &quot;&quot;) + IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;Central&quot;), &quot;;&quot;, &quot;&quot;)+IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;North East&quot;), &quot;North East&quot;, &quot;&quot;) + IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;North East&quot;), &quot;;&quot;, &quot;&quot;)+ IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;South East&quot;), &quot;South East&quot;, &quot;&quot;) + IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;South East&quot;), &quot;;&quot;, &quot;&quot;)+ IF (INCLUDES(OE_Ambassador_Volunteer__r.Region_Location__c, &quot;West&quot;), &quot;West&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Ambassador Region/Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Ambassador_Volunteer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>(LG20140424)- Please consult Dev Team before changing this field.  The OE Ambassador who volunteered for the parent meeting from the force.com site</description>
        <label>OE Ambassador Volunteer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.ContactAccountName__c</field>
                <operation>equals</operation>
                <value>Open Enrollment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OE Ambassador Volunteers</relationshipLabel>
        <relationshipName>Volunteer_Participants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_Coordinator__c</fullName>
        <formula>Volunteer_Event__r.OE_Coordinator_Contact__r.FirstName  &amp; &apos; &apos;  &amp;  Volunteer_Event__r.OE_Coordinator_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reaon_for_not_being_selected__c</fullName>
        <description>field to be added to the Thank you but no Thank you email template</description>
        <label>Reason for not being selected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlling travel expenses</fullName>
                </value>
                <value>
                    <fullName>Account Manager/Sales decided to attend</fullName>
                </value>
                <value>
                    <fullName>Meeting date change</fullName>
                </value>
                <value>
                    <fullName>Meeting was cancelled</fullName>
                </value>
                <value>
                    <fullName>Buddy Ambassador was not secured.</fullName>
                </value>
                <value>
                    <fullName>Did not submit mileage/estimate of travel expenses</fullName>
                </value>
                <value>
                    <fullName>Secured local representation</fullName>
                </value>
                <value>
                    <fullName>Another Ambassador near you volunteered sooner</fullName>
                </value>
                <value>
                    <fullName>Specific experience level needed for sensitive client, new group, presentation, etc.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>A consultant volunteered sooner than you.</fullName>
                </value>
                <value>
                    <fullName>Local consultant was secured.</fullName>
                </value>
                <value>
                    <fullName>Internal associate was secured.</fullName>
                </value>
                <value>
                    <fullName>Thanks but No thanks</fullName>
                </value>
                <value>
                    <fullName>Multiple Ambassadors Volunteered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Buddy_Program__c</fullName>
        <description>If the meeting is buddy program eligible then the user must select Yes or No that they would like a Buddy to Facilitate the meeting with them.</description>
        <label>Requested Buddy Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_OEAMBID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OEAMBID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_For_Facilitator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(LG20140423) Please consult with the dev team before modifying.  This field is used in a workflow.  This field indicates this OE Ambassador was selected to Facilitate the Meeting.</description>
        <inlineHelpText>Please check this box if this is the Open Enrollment Ambassador selected to Facilitate the meeting.</inlineHelpText>
        <label>Selected For Facilitator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_for_Facilitator_Tally__c</fullName>
        <formula>OE_Ambassador_Volunteer__r.OE_Amb_Selected_Current_Year_Tally__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected for Fac Current Year Tally</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thanks_but_No_Thanks_Tally__c</fullName>
        <formula>OE_Ambassador_Volunteer__r.OE_Amb_No_Thanks_Current_Year_Tally__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Thanks Current Year Tally</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thanks_but_No_Thanks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to trigger a workflow to send a thank you you have not been selected email.</description>
        <label>Thanks but No Thanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>OE_Ambassador_Volunteer__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Cost__c</fullName>
        <description>PRDCRM-27721 / Created By-Karthik.D</description>
        <formula>Flight_Cost__c + Hotel_Cost__c + Car_Rental_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the sum of all noted expenses</inlineHelpText>
        <label>Total Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Details__c</fullName>
        <formula>Travel_Distance__c&amp; &apos;, &apos;&amp;Travel_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the mileage and time as calculated based on the Volunteer’s zip code and Meeting address. This mileage is each way.</inlineHelpText>
        <label>Duration/Distance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Distance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Travel Distance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Duration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Travel Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Event__c</fullName>
        <label>Meeting Name</label>
        <referenceTo>SFDC_Volunteer_Event__c</referenceTo>
        <relationshipLabel>OE Ambassador Volunteers</relationshipLabel>
        <relationshipName>R00N30000001WZmFEAW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteered_for_1_meeting_in_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRDCRM-27721/ Created By : Karthik</description>
        <label>Volunteered for &gt; 1 meeting in group?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watch__c</fullName>
        <formula>OE_Ambassador_Volunteer__r.Watch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>field_to_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>field to count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OE Ambassador Volunteers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CONSULTANT_VOLUNTEERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>OE_Ambassador_Volunteer__c</columns>
        <columns>Facilitator_Type__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Volunteer_Event__c</columns>
        <columns>Thanks_but_No_Thanks__c</columns>
        <columns>Selected_For_Facilitator__c</columns>
        <columns>Reaon_for_not_being_selected__c</columns>
        <columns>Coordinator_Comment__c</columns>
        <columns>Comment__c</columns>
        <columns>Travel_Details__c</columns>
        <columns>OE_Ambassador_City_and_State__c</columns>
        <columns>OE_Coordinator__c</columns>
        <columns>Facilitator_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facilitator_Type__c</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filters>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Thanks_but_No_Thanks__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Selected_For_Facilitator__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Consultant Volunteers</label>
    </listViews>
    <listViews>
        <fullName>Oe_Ambassador_Volunteer_Records</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OE_Ambassador_Volunteer__c</columns>
        <columns>Travel_Duration__c</columns>
        <columns>Travel_Distance__c</columns>
        <columns>Travel_Details__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Volunteer_Event__c</columns>
        <columns>NAME</columns>
        <columns>Selected_For_Facilitator__c</columns>
        <columns>Thanks_but_No_Thanks__c</columns>
        <columns>Reaon_for_not_being_selected__c</columns>
        <columns>Comment__c</columns>
        <columns>Coordinator_Comment__c</columns>
        <columns>OE_Ambassador_City_and_State__c</columns>
        <columns>OE_Ambassador_Region_Location__c</columns>
        <columns>Watch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Facilitator_Type__c</field>
            <operation>equals</operation>
            <value>OE Ambassador</value>
        </filters>
        <filters>
            <field>Facilitator_Type__c</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filters>
        <label>OE Ambassador Volunteer Records</label>
    </listViews>
    <nameField>
        <displayFormat>Volunteer_ID {0000}</displayFormat>
        <label>Volunteer Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OE Ambassador Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>